package com.coffeepdf.coffeepdf.domain;

public enum AnnotationType {
    HIGHLIGHT,
    COMMENT,
    SHAPE
}
